syntax = "proto3";

option java_package = "pt.up.fc.dcc.hyrax.odcloud.protoc";
option java_outer_classname = "ODCloudGRPC";

package odcloudservice;

message BoolValue {
    bool value = 1;
}

message Empty {}

message String {
    string str = 1;
}

service LauncherService {
    rpc StartWorker(Empty) returns (BoolValue) {};
    rpc Stop(Empty) returns (BoolValue) {};
    rpc SetLogName(String) returns (BoolValue) {};
}